Fixed APIPortal and APIPortalBackend
